--- a/sections/concl.tex
+++ b/sections/concl.tex
@@ -1,1 +1,6 @@
 \chapter{Conclusiones}
+\section{Aprendizaje y conclusiones}
+
+\section{\LaTeX}
+Este trabajo sirve como introducción personal a \LaTeX{} y a la escritura de documentos formales, preparándome así para el Trabajo Fin de Grado.
+El código fuente de este documento está disponible en un repositorio de GitHub~\cite{source}.
