--- a/config.tex
+++ b/config.tex
@@ -16,23 +16,23 @@
 \titlespacing*{\chapter}{0pt}{-62pt}{0pt}
 
 \titleformat{\section}[block]
-  {\normalfont\large\bfseries}{\thesection.-}{4pt}{\large}
+  {\normalfont\Large\bfseries}{\thesection.}{4pt}{\Large}
 \titlespacing*{\section}{0pt}{\baselineskip}{0pt}
 
 \titleformat{\subsection}[block]
-  {\normalfont\normalsize\bfseries}{\thesubsection.-}{4pt}{\normalsize}
+  {\normalfont\normalsize\bfseries}{\thesubsection.}{4pt}{\normalsize}
 \titlespacing*{\subsection}{0pt}{0pt}{0pt}
 
 \titleformat{\subsubsection}[block]
-  {\normalfont\normalsize\bfseries}{\thesubsubsection.-}{4pt}{\normalsize}
+  {\normalfont\normalsize\bfseries}{\thesubsubsection.}{4pt}{\normalsize}
 \titlespacing*{\subsubsection}{0pt}{0pt}{0pt}
 
 \def\tablename{Tabla}
 
 %% Variables para portada y cabeceras
 %% Cambiar los valores para cada documento!!!
-\def\title{TÍTULO DEL PROYECTO}
-\def\subject{ASIGNATURA/SUBTÍTULO}
+\def\title{Minería de anomalías}
+\def\subject{Ingeniería de Negocio}
 \def\author{Juan Francisco Mier Montoto}
 \def\authorid{UO283319}
 \def\date{diciembre 2023}
@@ -41,17 +41,18 @@
 
 \def\ORG{\expandafter\MakeUppercase\expandafter{\org}}
 \def\AREA{\expandafter\MakeUppercase\expandafter{\area}}
+\def\SUBJECT{\expandafter\MakeUppercase\expandafter{\subject}}
 
 \fancypagestyle{plain}{%
   \fancyhf{}
   \fancyhead[L]{\includegraphics[height=16mm]{style/square.png}
     \hspace{1em} \Longstack[l]{
-      \textbf{\subject} \newline
+      \textbf{\SUBJECT} \newline
       \textbf{\title}}}
   \fancyhead[R]{\bfseries{Hoja \thepage{} \hspace{1pt} de~\pageref{LastPage}}}
   \fancyfoot[C]{\author}
-  \renewcommand{\headrulewidth}{0pt}% default is 0pt
-  \renewcommand{\footrulewidth}{0.4pt}% default is 0pt
+  \renewcommand{\headrulewidth}{0pt} % default is 0pt
+  \renewcommand{\footrulewidth}{0.4pt} % default is 0pt
 }
 
 \pagestyle{fancy}
