--- a/config.tex
+++ b/config.tex
@@ -32,7 +32,7 @@
 %% Variables para portada y cabeceras
 %% Cambiar los valores para cada documento!!!
 \def\title{Minería de anomalías}
-\def\subject{Ingeniería de Negocio}
+\def\subject{Inteligencia de Negocio}
 \def\author{Juan Francisco Mier Montoto}
 \def\authorid{UO283319}
 \def\date{diciembre 2023}
