--- a/main.tex
+++ b/main.tex
@@ -23,7 +23,6 @@
 \usepackage{hyperref} % Paquete para que las referencias funcionen, y permite introducir links
 \usepackage{xcolor} % Paquete para trabajar con colores (fondo de celdas, color del texto...)
 \usepackage{pdfpages} % Paquete para incluir páginas de otro PDF directamente
-\usepackage{lipsum} % Paquete para generación de texto
 \input{config.tex}
 
 
@@ -70,5 +69,7 @@
 \bibliography{biblio} % Indica el archivo que contiene la colección de citas
 
 \nocite{apuntes}
+\nocite{leal2009aplicacion}
+\nocite{perez2020uso}
 
 \end{document}
