completar técnicas, mejorar introducción, biblio

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,6 +1,6 @@
 @unpublished{apuntes,
   author = {Luciano Sánchez Ramos},
-  title  = {VA2 - Anomalías},
+  title  = {{VA2} - {Anomalías}},
   year   = {2023},
   note   = {Apuntes de la asignatura de \textit{Inteligencia de Negocio}, EPI Gijón}
 }
@@ -24,4 +24,39 @@
   title        = {neg-teo-ii},
   note         = {Código fuente del trabajo},
   year         = {2023}
+}
+
+@misc{enwiki:1188321736,
+  author = "{Wikipedia contributors}",
+  title = "Anomaly detection --- {Wikipedia}{,} The Free Encyclopedia",
+  year = "2023",
+  url = "\url{https://en.wikipedia.org/w/index.php?title=Anomaly_detection&oldid=1188321736}",
+  note = "[Internet; visitado 11-noviembre-2023]"
+}
+
+@misc{eswiki:155256141,
+  author = "{Wikipedia contributors}",
+  title = "Detección de anomalías --- {Wikipedia}{,} La enciclopedia libre",
+  year = "2023",
+  url = "\url{https://es.wikipedia.org/w/index.php?title=Detecci%C3%B3n_de_anomal%C3%ADas&oldid=155256141}",
+  note = "[Internet; visitado 11-noviembre-2023]"
+}
+
+@article{chandola2009anomaly,
+  author = {Chandola, Varun and Banerjee, Arindam and Kumar, Vipin},
+  title = {Anomaly Detection: A Survey},
+  year = {2009},
+  issue_date = {July 2009},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  volume = {41},
+  number = {3},
+  issn = {0360-0300},
+  url = {\url{https://doi.org/10.1145/1541880.1541882}},
+  doi = {10.1145/1541880.1541882},
+  journal = {ACM Comput. Surv.},
+  month = {jul},
+  articleno = {15},
+  numpages = {58},
+  keywords = {outlier detection, Anomaly detection}
 }
