--- a/sections/3_pre.tex
+++ b/sections/3_pre.tex
@@ -1,4 +1,4 @@
-\chapter{Preprocesamiento de datos}
+\chapter{Preprocesamiento de datos}\label{chap:pre}
 \section{Técnicas de preprocesamiento}
 
 \section{Selección de características}
