--- a/sections/concl.tex
+++ b/sections/concl.tex
@@ -1,5 +1,5 @@
 \chapter{Conclusiones}
-\section{Aprendizaje y conclusiones}
+\section{Aprendizaje}
 
 \section{\LaTeX}
 Este trabajo sirve como introducción personal a \LaTeX{} y a la escritura de documentos formales, preparándome así para el Trabajo Fin de Grado.
