historia, añadir bilbiografía

--- a/biblio.bib
+++ b/biblio.bib
@@ -60,3 +60,33 @@
   numpages = {58},
   keywords = {outlier detection, Anomaly detection}
 }
+
+@INPROCEEDINGS{denning1987intrusion,
+  author={Denning, Dorothy E.},
+  booktitle={1986 IEEE Symposium on Security and Privacy},
+  title={An Intrusion-Detection Model},
+  year={1986},
+  volume={},
+  number={},
+  pages={118-118},
+  doi={10.1109/SP.1986.10010}
+}
+
+@article{patcha2007overview,
+  author = {Patcha, Animesh and Park, Jung-Min (Jerry)},
+  year = {2007},
+  month = {08},
+  pages = {3448-3470},
+  title = {An overview of anomaly detection techniques: Existing solutions and latest technological trends},
+  volume = {51},
+  journal = {Computer Networks},
+  doi = {10.1016/j.comnet.2007.02.001}
+}
+
+@inproceedings{fawcett1999activity,
+  title={Activity monitoring: Noticing interesting changes in behavior},
+  author={Fawcett, Tom and Provost, Foster},
+  booktitle={Proceedings of the fifth ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={53--62},
+  year={1999}
+}
