--- a/sections/1_intro.tex
+++ b/sections/1_intro.tex
@@ -49,4 +49,20 @@ causas comunes que pueden ser identificadas:
 \end{itemize}
 
 \section{Historia y evolución}
-|TODO|
+El concepto de \textit{detección de intrusiones} (IDS) fue introducido por Dorothy Denning en
+1987~\cite{denning1987intrusion}. En su trabajo, Denning propuso un sistema de detección de intrusiones
+basado en el análisis de los registros de auditoría del sistema. Este sistema se basaba en la idea
+de que las actividades de los usuarios legítimos del sistema se pueden modelar y, por lo tanto,
+se pueden detectar las actividades que no se ajustan a dicho modelo. Este trabajo fue el punto de
+partida de la detección de anomalías.
+
+La detección de intrusiones es un componente crítico de la detección de anomalías y ha ido evolucionando
+significativamente con el paso del tiempo. En la actualidad, los sistemas de detección de intrusiones
+se basan en técnicas de aprendizaje automático y de minería de datos, reflejando el progreso de la minería
+de excepciones.
+
+En 1999, científicos de Bell Atlantic desarrollaron un sistema de detección de fraudes basado en reglas
+~\cite{fawcett1999activity}.
+
+El término \textit{minería de anomalías} fue introducido por primera vez por \textit{Patcha y Park} en 2007
+~\cite{patcha2007overview}.
