--- a/main.tex
+++ b/main.tex
@@ -54,6 +54,7 @@
 \input{sections/4_cus.tex}
 \input{sections/5_desafios.tex}
 \input{sections/6_tools.tex}
+\input{sections/7_practica.tex}
 \input{sections/concl.tex}
 
 %% Esto incluirá la bibliografía correctamente en nuestro trabajo
