--- a/sections/1_intro.tex
+++ b/sections/1_intro.tex
@@ -9,7 +9,7 @@ Estas anomalías representan desviaciones significativas de los comportamientos 
 o de las tendencias habituales en un entorno comercial.
 \subsection{Anomalía}
 Existen múltiples posibles definiciones de anomalía. Algunas de ellas son:
-\begin{itemize}[noitemsep,topsep=0pt]
+\begin{itemize}[topsep=0pt]
 	\item Una observación que se desvía tanto de las demás como para despertar sospechas de
 		que se ha generado por un mecanismo diferente.
 	\item Casos o conjuntos de datos que aparecen muy raramente y cuyas características
@@ -60,9 +60,6 @@ La detección de intrusiones es un componente crítico de la detección de anoma
 significativamente con el paso del tiempo. En la actualidad, los sistemas de detección de intrusiones
 se basan en técnicas de aprendizaje automático y de minería de datos, reflejando el progreso de la minería
 de excepciones.
-
-En 1999, científicos de Bell Atlantic desarrollaron un sistema de detección de fraudes basado en reglas
-~\cite{fawcett1999activity}.
 
 El término \textit{minería de anomalías} fue introducido por primera vez por \textit{Patcha y Park} en 2007
 ~\cite{patcha2007overview}.
