--- a/sections/5_desafios.tex
+++ b/sections/5_desafios.tex
@@ -1,4 +1,68 @@
 \chapter{Desafíos y consideraciones éticas}
 \section{Problemas comunes}
+A la hora de tratar de utilizar y evaluar métodos de detección de anomalías, existen una
+serie de problemas comunes que se deben tener en cuenta:
 
-\section{Aspectos éticos}
+\begin{itemize}[topsep=0pt]
+	\item \textbf{Evaluación:} a la hora de evaluar la calidad de un clasificador, las medidas que se tomen
+		pueden no ser adecuadas para el problema en cuestión. Por ejemplo, en el caso de los fraudes,
+		la tasa de falsos positivos puede ser más importante que la tasa de falsos negativos.
+	\item \textbf{Eficiencia y escalabilidad:} debido a la gran cantidad de datos que se manejan y los
+		recursos computacionales que se necesitan para crear un clasificador ajustado a estos, la eficiencia
+		es un factor a tener en cuenta.
+	\item \textbf{Número de atributos:} dependiendo del conjunto de datos con el que se esté tratando, en
+		ocasiones puede ser necesario \emph{más de un atributo} para \textbf{definir} una anomalía.
+	\item \textbf{Localidad:} a la hora de detectar anomalías, es importante tener en cuenta tanto el
+		\emph{conjunto} como el \emph{entorno} en el que se encuentra cada objeto. Como visto en clase,
+		una persona puede ser considerada ``anormalmente'' alta para la población \textit{normal},
+		pero no dentro del conjunto \textit{jugadores de baloncesto}.
+	\item \textbf{Grado de anormalidad:} la propiedad de ser anormal no es binaria, sino que se le puede
+		asignar un \emph{grado de anormalidad}, que normalmente define la distancia entre el objeto y el
+		conjunto de datos normales. Este concepto es importante y es la base de muchas técnicas de detección
+		no supervisadas o semi-supervisadas (Ver \nameref{chap:tecnicas}).
+	\item \textbf{Múltiples anomalías simultáneas:} en ocasiones, un objeto puede ser considerado anómalo
+		por múltiples razones. En relación con el punto anterior, el hecho de que dos objetos tengan el mismo
+		\textit{grado} de anormalidad no implica que sean anómalos por los mismos motivos (\textit{atributos}).
+\end{itemize}
+\newpage{}
+Estos son algunos de los posibles problemas que se pueden encontrar a la hora de desarrollar un sistema de
+este tipo, pero existen muchos más:
+\begin{itemize}
+	\item Preprocesado incorrecto o insuficiente
+	\item Conjuntos desbalanceados
+	\item Sesgo (Ver \nameref{sec:etica})
+	\item Interpretación de los resultados
+	\item \ldots
+\end{itemize}
+
+\section{Aspectos éticos}\label{sec:etica}
+Aunque la detección de anomalías sea una herramienta muy poderosa a la hora de identificar
+fraudes, errores o problemas, también plantea desafíos éticos a tener en cuenta.
+
+La primera gran categoría de dichos problemas reside en la obtención del conjunto en sí.
+A la hora de recoger datos, es importante tener en cuenta la privacidad y confidencialidad
+de las partes interesadas en los mismos, ya que puede contener información sensible. Además
+de tener en cuenta la privacidad, es importante considerar la legalidad del tratamiento de
+dichos datos. Como se ha visto en otras asignaturas de este curso, la toma de decisiones
+automatizada sobre individuos o el tratamiento de datos personales se encuentra regulada
+por la \textit{Ley Orgánica de Protección de Datos} (LOPD)~\cite{lopd}.
+
+Otra categoría de problemas éticos reside en la calidad del conjunto. En ocasiones, los
+conjuntos de datos pueden contener sesgos, ya sea por la forma en la que se han recogido
+los datos o por la propia naturaleza de los mismos. Por ejemplo, en el caso de los fraudes,
+es posible que los datos que se tengan sobre fraudes sean de un tipo concreto, por lo que
+el clasificador no será capaz de detectar fraudes de otro tipo. Este problema se conoce
+como \textit{sesgo de selección}. Otro ejemplo de sesgo es el \textit{sesgo de supervivencia},
+que se produce cuando los datos que se tienen son de los objetos que han sobrevivido a un
+proceso de selección, pero no de los que no lo han hecho.
+
+Por último, es importante tener en cuenta las posibles consecuencias de la minería de
+anomalías. En ocasiones, los resultados de la detección de anomalías pueden tener un
+impacto negativo en las personas o entidades involucradas. De otra forma, se pueden
+obtener resultados incorrectos o mal interpretados, lo que puede llevar a tomar decisiones
+erróneas.
+
+Como conclusión, es importante tener en cuenta que la minería de anomalías es una herramienta
+muy potente pero con potenciales consecuencias negativas, en especial contra la privacidad
+de individuos y otras partes interesadas. A parte de los problemas éticos, también se deben
+tener en cuenta los problemas legales que se pueden derivar de su uso.
