init casos de uso

--- a/biblio.bib
+++ b/biblio.bib
@@ -98,3 +98,14 @@
   url = {\url{https://www.boe.es/eli/es/lo/2018/12/05/3/con}},
   note = "«BOE» núm. 294, de 6 de diciembre de 2018, páginas 119033 a 119101 (69 págs.)"
 }
+
+@article{wong2005wsare,
+  author  = {Weng-Keen Wong and Andrew Moore and Gregory Cooper and Michael Wagner},
+  title   = {{What's Strange About Recent Events} ({WSARE}): An Algorithm for the Early Detection of Disease Outbreaks},
+  journal = {Journal of Machine Learning Research},
+  year    = {2005},
+  volume  = {6},
+  number  = {66},
+  pages   = {1961--1998},
+  url     = {http://jmlr.org/papers/v6/wong05a.html}
+}
