--- a/sections/1_intro.tex
+++ b/sections/1_intro.tex
@@ -48,7 +48,7 @@ causas comunes que pueden ser identificadas:
 		(Ver \nameref{chap:pre})
 \end{itemize}
 
-\section{Historia y evolución}
+\section{Historia y evolución}\label{sec:hist}
 El concepto de \textit{detección de intrusiones} (IDS) fue introducido por Dorothy Denning en
 1987~\cite{denning1987intrusion}. En su trabajo, Denning propuso un sistema de detección de intrusiones
 basado en el análisis de los registros de auditoría del sistema. Este sistema se basaba en la idea
