--- a/sections/4_cus.tex
+++ b/sections/4_cus.tex
@@ -1,5 +1,15 @@
-\chapter{Casos de uso}
-\label{chap:cus}
+\chapter{Casos de uso}\label{chap:cus}
 \section{Casos reales}
+Como ya se ha mencionado (Ver \nameref{sec:hist}), la detección de anomalías comenzó a partir de la
+detección de intrusiones de Dorothy Denning~\cite{denning1987intrusion}. A partir de entonces, se
+han ido desarrollando diferentes técnicas y usos para la detección de anomalías, como por ejemplo:
+
+\begin{itemize}
+	\item En \textbf{1999}, científicos de Bell Atlantic desarrollaron un sistema de detección de
+		anomalías para detectar fraudes en las llamadas telefónicas~\cite{fawcett1999activity}.
+	\item En \textbf{2005}, investigadores de las universidades del estado de Oregon y Carnegie Mellon
+		propusieron algoritmos que aplicaban la detección de anomalías a la detección temprana de
+		brotes de enfermedades~\cite{wong2005wsare}.
+\end{itemize}
 
 \section{Ejemplos de uso}
